Removed SonarLint warning